<resources>
    <string name="app_name">PuntoDashboard</string>
    <string name="power_steering">Power steering</string>
    <string name="asr">ASR</string>
    <string name="hazard">Hazard</string>
    <string name="door_lock">Door Lock</string>
    <string name="eco">ECO</string>
    <string name="start_stop">Start Stop</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="passenger_airbag">PASSENGER AIRBAG</string>
</resources>
